anti-stall timers in sidebar & other sidebar changes