@@ -116,6 +116,8 @@ public class CommandDebug extends CustomCommand {
 					kitSniper = args.length == 3 ? Boolean.parseBoolean(args[2]) : !kitSniper;
 					auditEvent(sender, "game kitSniper %s", kitSniper);
 					sender.sendMessage(Component.text("Set enable kit sniper to " + kitSniper, NamedTextColor.GREEN));
+				} else if (args[1].equals("antistall")) {
+					doGameAntiStall(sender, args);
 				} else if (args[1].equals("kitfilter")) {
 					setKitRestrictions(sender, args);
 				}
@@ -253,6 +255,21 @@ public class CommandDebug extends CustomCommand {
 			}
 		}
 		return true;
+	}
+
+	private void doGameAntiStall(CommandSender sender, String[] args) {
+		var game = Main.getGame();
+		if (args.length < 3) {
+			// info
+			sender.sendMessage(Component.textOfChildren(
+				Component.text("Anti-stall info:\ngameTick: " + TeamArena.getGameTick() + "\n", NamedTextColor.GOLD),
+				Component.text(game.getDebugAntiStall())
+			));
+		} else {
+			int antiStallCountdown = Integer.parseInt(args[2]);
+			game.setDebugAntiStall(antiStallCountdown);
+			sender.sendMessage(Component.text("Set anti-stall countdown to " + antiStallCountdown));
+		}
 	}
 
 	public static Kit filterKit(Kit kit) {
@@ -521,7 +538,7 @@ public class CommandDebug extends CustomCommand {
 			return switch (args[0].toLowerCase(Locale.ENGLISH)) {
 				case "gui" -> Arrays.asList("true", "false");
 				case "guitest" -> Arrays.asList("tab", "spectate");
-				case "game" -> Arrays.asList("start", "ignorewinconditions", "sniperaccuracy", "enablekitsniper", "kitfilter");
+				case "game" -> List.of("start", "ignorewinconditions", "sniperaccuracy", "enablekitsniper", "kitfilter", "antistall");
 				case "setrank" -> Arrays.stream(PermissionLevel.values()).map(Enum::name).toList();
 				case "setteam" -> Arrays.stream(Main.getGame().getTeams())
 						.map(team -> team.getSimpleName().replace(' ', '_'))
@@ -529,6 +546,7 @@ public class CommandDebug extends CustomCommand {
 				case "setkit" -> Main.getGame().getTabKitList();
 				case "draw" -> Arrays.asList("text", "area", "clear", "invalidatebase");
 				case "graffititest" -> CosmeticsManager.getLoadedCosmetics(CosmeticType.GRAFFITI).stream().map(NamespacedKey::toString).toList();
+				case "respawn" -> Bukkit.getOnlinePlayers().stream().map(Player::getName).toList();
 				default -> Collections.emptyList();
 			};
 		} else if (args.length == 3) {
@@ -537,8 +555,9 @@ public class CommandDebug extends CustomCommand {
 						.map(Player::getName).toList();
 				case "game" -> switch (args[1]) {
 					case "start" -> Collections.emptyList();
-					case "kitfilter" -> Arrays.asList("allow", "block");
-					default -> Arrays.asList("true", "false");
+					case "kitfilter" -> List.of("allow", "block");
+					case "antistall" -> List.of("0");
+					default -> List.of("true", "false");
 				};
 				default -> Collections.emptyList();
 			};
